# kidns

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.env  config.yaml  docker-compose.yaml  generate-certificate.sh  generate-root-certificate.sh  generate-sa-context.sh  kidns.sh  local_cache.conf  service-account.yaml
src/: config.rs  dns.rs  k8s.rs  main.rs  proxy.rs  util.rs
src/config/: logs.rs  properties.rs
src/dns/: buffer.rs  header.rs  packet.rs  question.rs  record.rs  server.rs
src/dns/server/: cache.rs  dns.rs  handler.rs
src/k8s/: client.rs  macros.rs
src/proxy/: http.rs  server.rs
src/proxy/k8s/: client.rs
src/proxy/server/: cert.rs  handler.rs  proxy.rs  tls.rs
src/server/: dns.rs  handler.rs
