[package]
name = "kidns"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = [ "fs", "net", "rt", "macros", "io-std"] }
tokio-rustls = "0.25.0-alpha.1"
rustls = "0.22.0-alpha.3"
rustls-pemfile = "2.0.0-alpha.1"
webpki = { package = "rustls-webpki", version = "=0.102.0-alpha.3", features = ["alloc", "std"] }
env_logger = "0.10"
log = "0.4"
dotenv = "0.15"
kube = { version = "0.82", features = ["runtime", "derive", "ws", "rustls-tls"] }
k8s-openapi = { version = "0.18", features = ["v1_25"] }
chrono = "0.4"
httparse = "1.8.0"
webpki-roots = "0.26.0-alpha.1"
# 'vendored' need to compile for cross platform
# otherwise -> Could not find directory of OpenSSL installation
#openssl = { version = "0.10.53", features = ["vendored"]}

[profile.release]
lto = true
