[package]
name = "kidns"
version = "0.5.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", features = ["fs", "net", "rt", "macros", "io-std"] }
tokio-rustls = "0.25"
rustls = "0.22"
rustls-pemfile = "2.1"
rustls-webpki = { version = "0.102", features = ["alloc", "std"] }
webpki-roots = "0.26"
rcgen = { version = "0.12", features = ["x509-parser"] }
ring = "0.17"
pem = "3.0"
x509-parser = "0.15"
rand = "0.8"
rsa = "0.9"

kube = { version = "0.88", features = ["runtime", "derive", "ws", "rustls-tls"] }
k8s-openapi = { version = "0.21", features = ["v1_26"] }
httparse = "1.8"
time = "0.3.34"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
env_logger = "0.11"
log = "0.4"
anyhow = "1"
# 'vendored' need to compile for cross-platform, ex. musl
# otherwise -> Could not find directory of OpenSSL installation
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
lto = true

[dev-dependencies]
assert_fs = "1"

